[package]
name = "golden-bdf-parser"
description = "BDF font parser"
version = "0.1.1"
edition = "2021"
authors = ["James Waples <james@wapl.es>", "Ralf Fuest <mail@rfuest.de>"]
repository = "https://github.com/embedded-graphics/bdf"
categories = ["parser-implementations"]
keywords = ["parser", "bdf", "font", "nom"]
license = "MIT OR Apache-2.0"

[dependencies]
#bdf-parser = "0.1.0"
bstr = "1.12.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
indoc = "2.0.6"
